--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -4,5 +4,6 @@
   status = 200
 
 [build]
-command = "npm run build"  # Use npm for build
-publish = "client/build"   # Replace with your publish directory
+command = "npm run build"   # Use your Vite build command here
+publish = "path/to/dist"    # Replace with the path to your Vite build output directory
+
